# app/Models/Teacher.php
@@ -6,16 +6,19 @@ use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
-class School extends Model
+class Teacher extends Model
 {
     use HasFactory;
 
-    protected $with = ['schoolType'];
-    
-    public function schoolType(): BelongsTo
+    protected $with = ['school', 'gender'];
+
+    public function school(): BelongsTo
     {
         return $this->belongsTo(SchoolType::class)->withDefault();
     }
 
-    
+    public function gender(): BelongsTo
+    {
+        return $this->belongsTo(Gender::class)->withDefault();
+    }
 }
